Add support to filter registrants and visitors for specific year. Add paging support for registrants
Signed-off-by: doychin <doychin@dsoft-bg.com>